--- a/Angular Snippets/Angular Snippets/Angular Snippets.csproj
+++ b/Angular Snippets/Angular Snippets/Angular Snippets.csproj
@@ -15,11 +15,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{03a25c33-4000-4316-9f26-80319db8ac3e}</ProjectGuid>
+    <ProjectGuid>{03A25C33-4000-4316-9F26-80319DB8AC3E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Angular_Snippets</RootNamespace>
-    <AssemblyName>Angular_Snippets</AssemblyName>
+    <AssemblyName>Angular Snippets</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
     <IncludeAssemblyInVSIXContainer>false</IncludeAssemblyInVSIXContainer>
@@ -49,10 +49,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Snippets\Name Of Snippet Pack\ae.snippet">
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <None Include="readme.md" />
+    <None Include="LICENSE" />
+    <None Include="Snippets\Angular1 Snippets\Controller.snippet" />
+    <None Include="Snippets\Angular1 Snippets\Factory.snippet" />
+    <None Include="Snippets\Angular1 Snippets\q-promise.snippet" />
+    <None Include="Snippets\Angular1 Snippets\Service.snippet" />
+    <None Include="README.md" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
